force-app/main/default/objects/T_qtc_Active_Payment_Customer_Detail__c/T_qtc_Active_Payment_Customer_Detail__c.object-meta.xml
<CustomObject>
    <label>T_qtc_Active_Payment_Customer_Detail</label>
    <nameField>
        <label>T_qtc_Active_Payment_Customer_Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_Active_Payment_Customer_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>