force-app/main/default/objects/T_qtc_Active_Payment_Customer_Detail__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>