force-app/main/default/objects/T_qtc_Active_Payment_Customer_Detail__c/fields/Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fee__c</fullName>
    <label>Bank Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>