force-app/main/default/objects/T_qtc_Active_Payment_Customer_Detail__c/fields/Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text__c</fullName>
    <label>Formula (Text)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>