force-app/main/default/objects/T_qtc_Active_Payment_Customer_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_Fee__c</columns>
    <columns>Internal_ID__c</columns>
    <columns>OSA_Contract_Number_from_Salesforce__c</columns>
    <columns>Amount_Foreign_Currency_without_Symbol__c</columns>
    <columns>External_ID__c</columns>
    <columns>Formula_Text__c</columns>
    <columns>Status__c</columns>
    <columns>Subsidiary_no_hierarchy__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Amount_Foreign_Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>